--- a/saitae-web/src/main/webapp/pages/repInv.xhtml
+++ b/saitae-web/src/main/webapp/pages/repInv.xhtml
@@ -77,12 +77,11 @@
                     </p:column>
                 </p:dataTable>
                 <h:commandLink rendered="#{repInvController.verInvBiblio}">
-                    <p:graphicImage library="img" name="xls.png" width="37px" height="32px"/>
-                    <p:dataExporter type="xls" target="inv" 
-                                    options="#{axiliarController.excelOpt}"
+                    <p:graphicImage library="img" name="pdf.png" width="37px" height="32px"/>
+                    <p:dataExporter type="pdf" target="inv" 
                                     fileName="Inventario_#{repInvController.trSelected.tipoRecursoNombre}_#{repInvController.añoActual}"
                                     encoding="UTF-8"
-                                    postProcessor="#{repInvController.reporte}"/>
+                                    exporter="#{repInvController.pdfExporterBib}"/>
                 </h:commandLink>
 
                 <p:dataTable id="invCra" value="#{repInvController.ejemplares}" var="e"
@@ -127,12 +126,11 @@
                     </p:column>
                 </p:dataTable>
                 <h:commandLink rendered="#{repInvController.verInvCRA}">
-                    <p:graphicImage library="img" name="xls.png" width="37px" height="32px"/>
-                    <p:dataExporter type="xls" target="invCra" 
-                                    options="#{axiliarController.excelOpt}"
+                    <p:graphicImage library="img" name="pdf.png" width="37px" height="32px"/>
+                    <p:dataExporter type="pdf" target="invCra"
                                     fileName="Inventario_#{repInvController.trSelected.tipoRecursoNombre}_#{repInvController.añoActual}"
                                     encoding="UTF-8"
-                                    postProcessor="#{repInvController.reporte}"/>
+                                    exporter="#{repInvController.pdfExporterCra}"/>
                 </h:commandLink>
             </h:panelGrid>
         </h:form>
