Modificaciones hechas a raíz de la cuarta ronda de pruebas.

--- a/saitae-web/src/main/webapp/pages/permisoM.xhtml
+++ b/saitae-web/src/main/webapp/pages/permisoM.xhtml
@@ -50,7 +50,7 @@
                                   disabledDays="#{permisoMaController.invalidDays}"
                                   requiredMessage="Debe seleccionar una fecha válida"
                                   placeholder="Selecciona la fecha de inicio del permiso" 
-                                  validatorMessage="Nunguna fecha puede ser en los días Sábado y Domingo">
+                                  validatorMessage="Ninguna fecha puede ser en los días Sábado y Domingo">
                         <p:ajax event="dateSelect" update="form" 
                                 listener="#{permisoMaController.onBlour}"/>
                     </p:datePicker>
